src/objects/CTCT2__Upload_History__c.object
<CustomObject>
    <fields>
        <fullName>CTCT2__Added__c</fullName>
        <label># Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTCT2__Constant_Contact_Activity_ID__c</fullName>
        <label>Constant Contact Activity ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__Errors__c</fullName>
        <inlineHelpText>Count of errors as from the Constant Contact activity.</inlineHelpText>
        <label># Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__History_Type__c</fullName>
        <label>History Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact List</fullName>
                </value>
                <value>
                    <fullName>Contact Report Upload</fullName>
                </value>
                <value>
                    <fullName>Lead List</fullName>
                </value>
                <value>
                    <fullName>Lead Report Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Run_End_Time__c</fullName>
        <inlineHelpText>When Constant Contact finished processing the uploaded contacts.</inlineHelpText>
        <label>Run End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTCT2__Run_Start_Time__c</fullName>
        <inlineHelpText>When Constant Contact started processing the uploaded contacts.</inlineHelpText>
        <label>Run Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTCT2__Selected__c</fullName>
        <label># Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCT2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload Failed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Uploaded__c</fullName>
        <label># Uploaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Constant Contact Upload History</label>
    <listViews>
        <fullName>CTCT2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Upload-{0}</displayFormat>
        <label>Upload History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>